implemented logic changes based on review comments, enabled hystrix